--- a/src/app/nav/nav-styles.css
+++ b/src/app/nav/nav-styles.css
@@ -1,5 +1,14 @@
 
 
-.new-nav-item {
-    color: #fff;
+.navbar-inverse .navbar-nav>li>a {
+    color: #ddd;
 }
+
+
+.active-item-lol {
+    font-size: 20px;
+    background-color: #000066;
+}
+
+
+
