class work from 10/12

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,4 @@
 <p>Landing page! Insert pertinent information here.</p>
+<div *ngIf="showWarning === true" class="alert alert-warning">
+    <p class="text-center">YOU DIDNT LOG IN CUZ</p>
+</div>
