--- a/src/app/room/room.html
+++ b/src/app/room/room.html
@@ -1,5 +1,6 @@
 <p>Welcome to room...</p>
 <p>ID: {{ thisId }}</p>
+<app-room-form></app-room-form>
 <p *ngIf="userName">User is logged in as {{userName.name}}</p>
 <p *ngIf="!userName">User is NOT logged in</p>
 <button class="btn btn-info" (click)="toggleCanDeactivate()">Can you leave? {{CanIDeactivate}}</button>
