--- a/src/app/room/room-form/room-form.component.css
+++ b/src/app/room/room-form/room-form.component.css
@@ -26,3 +26,15 @@
 label {
     margin-right: 10px;
 }
+
+.room-form {
+    background-color: #555;
+    padding: 15px;
+    border: 2px solid #000066;
+    border-radius: 15px;
+    color: #fff;
+}
+
+.room-form input, .room-form select {
+    color: #000;
+}
