rnamed rooms, edited landing page a bit

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,4 +1,5 @@
-<p>Landing page! Insert pertinent information here.</p>
+<h1 class="text-center">Room Reservation</h1>
+<h3 class="text-center">Please Log in and then select a room.</h3>
 <div *ngIf="showWarning === true" class="alert alert-warning">
     <p class="text-center">YOU DIDNT LOG IN CUZ</p>
 </div>
