added room list

--- a/src/app/room/room.html
+++ b/src/app/room/room.html
@@ -10,6 +10,7 @@
             Picture of room {{ thisId }} will go here.
         </div>
         <div class="col-sm-6">
+            <app-room-list></app-room-list>
             <app-room-form [roomId]="thisId"></app-room-form>
         </div>
     </div>
