created a child route for the room component and also created a feature module

--- a/src/app/room/room.html
+++ b/src/app/room/room.html
@@ -10,8 +10,9 @@
             Picture of room {{ thisId }} will go here.
         </div>
         <div class="col-sm-6">
-            <app-room-list></app-room-list>
-            <app-room-form [roomId]="thisId"></app-room-form>
+            <!-- <app-room-list></app-room-list>
+            <app-room-form [roomId]="thisId"></app-room-form> -->
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
