--- a/src/app/room/room-list/room-list.component.html
+++ b/src/app/room/room-list/room-list.component.html
@@ -2,3 +2,4 @@
 <div class="well">
     You have {{ reservations?.length || 'no' }} reservations today.
 </div>
+<button class="btn btn-default">Make a reservation</button>
