--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
+
+body {
+    font-family: 'Orbitron', sans-serif
+}
+
 .align-center {
     align-items: center;
 }
