some css stylings on the room page, imported pressstart font as well

--- a/src/app/room/room-list/room-list.component.html
+++ b/src/app/room/room-list/room-list.component.html
@@ -1,4 +1,4 @@
-<p>List of Reservations for {{roomId}}</p>
+<h4>List of Reservations for {{roomId}}</h4>
 <div class="well">
     You have {{ reservations?.length || 'no' }} reservations today.
 </div>
