--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import url('https://fonts.googleapis.com/css?family=Orbitron');
+@import url('https://fonts.googleapis.com/css?family=Orbitron|Press+Start+2P');
 
 body {
     font-family: 'Orbitron', sans-serif
@@ -22,3 +22,6 @@ body {
     justify-content: center;
 }
 
+.font-start {
+    font-family: 'Press Start 2P', cursive;
+}
