--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -3,3 +3,6 @@
 <div *ngIf="showWarning === true" class="alert alert-warning">
     <p class="text-center">YOU DIDNT LOG IN CUZ</p>
 </div>
+<div *ngIf="noProviderError === true" class="alert alert-warning">
+    <p class="text-center">Please select a provider prior to logging in.</p>
+</div>
