list now actually displays reservations and delete buttons are fully functional

--- a/src/app/room/room-list/room-list.component.html
+++ b/src/app/room/room-list/room-list.component.html
@@ -3,4 +3,10 @@
     You have {{ room?.reservations?.length || 'no' }} reservations today.
 </div>
 <button class="btn btn-default" routerLink="../form">Make a reservation</button>
-<pre>{{ room | json }}</pre>
+<div class="list-group" *ngFor="let reservation of room?.reservations">
+    <h4>{{ reservation.reason }}</h4>
+    <h5>{{ reservation.email }}</h5>
+    <p>{{ reservation.startTime }} - {{ reservation.endTime }}</p>
+    <button class="btn btn-danger btn-xs" (click)="deleteReservation(reservation.id)">Delete Reservation</button>
+    <hr>
+</div>
