--- a/src/app/room/room.html
+++ b/src/app/room/room.html
@@ -1,7 +1,7 @@
 <h1 class="text-center"> {{ thisId }}</h1>
 
-<h3 class="text-center" *ngIf="userName">Welcome, {{userName.name}}</h3>
-<p  class="text-warning" *ngIf="!userName">You are not logged in. You will not be able to view any rooms without logging in first.</p>
+<h3 class="text-center" *ngIf="loggedInUser">Welcome, {{loggedInUser.displayName}}</h3>
+<p  class="text-warning" *ngIf="!loggedInUser">You are not logged in. You will not be able to view any rooms without logging in first.</p>
 <div class="space-divider"></div>
 <!-- <button class="btn btn-info" (click)="toggleCanDeactivate()">Can you leave? {{CanIDeactivate}}</button> -->
 <div class="container-fluid">
