--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,9 @@
 @import url('https://fonts.googleapis.com/css?family=Orbitron|Press+Start+2P');
 
 body {
-    font-family: 'Orbitron', sans-serif
+    font-family: 'Orbitron', sans-serif;
+    background-color: #000;
+    color: #fff;
 }
 
 .align-center {
