adjusted nav border and dropdown colors

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -19,3 +19,12 @@
 .log-button {
     margin-left: 20px;
 }
+
+.my-menu {
+    background-color: #333;
+    border: 1px solid white;
+}
+
+.my-menu li:hover {
+    color: #000;
+}
