added bitwise logo on landing

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,6 +1,9 @@
 <h1 class="text-center">Room Reservation</h1>
 <h3 class="text-center">Welcome to a simulated room reservation system for Bitwise Industries</h3>
 <h4 class="text-center">Please log in, and select a room</h4>
+<div class="flex-container justify-center bitwise-black">
+    <img src="./../../assets/bitwise-black.jpg" alt="Bitwise Industries">
+</div>
 <div *ngIf="showWarning === true" class="alert alert-warning reserve-warning">
     <p class="text-center">Please log in first before selecting a room.</p>
 </div>
