--- a/src/app/room/room-list/room-list.component.html
+++ b/src/app/room/room-list/room-list.component.html
@@ -1,8 +1,11 @@
-<h4>List of Reservations for {{room?.name}}</h4>
-<div class="well">
-    You have {{ room?.reservations?.length || 'no' }} reservations today.
+<h4 class="text-center">Number of reservations for {{room?.name}}:</h4>
+<div class="reserve-number text-center" [ngClass]="{'reservations-yes': room?.reservations?.length > 0, 'reservations-no': !room?.reservations?.length}">
+    {{ room?.reservations?.length || 'None' }}
 </div>
-<button class="btn btn-default" routerLink="../form">Make a reservation</button>
+<div class="flex-container justify-center">
+    <button class="btn btn-success" routerLink="../form">Make a reservation</button>
+</div>
+
 <div class="list-group" *ngFor="let reservation of room?.reservations">
     <h4>{{ reservation.reason }}</h4>
     <h5>{{ reservation.email }}</h5>
