adjusted styles on room form warning to match styles on landing page warning

--- a/src/app/room/room-form/room-form.component.css
+++ b/src/app/room/room-form/room-form.component.css
@@ -38,3 +38,10 @@ label {
 .room-form input, .room-form select {
     color: #000;
 }
+
+.room-form-warning {
+
+    background-color: #222;
+    color: #f77;
+    margin: 30px auto;
+}
