--- a/src/styles.css
+++ b/src/styles.css
@@ -27,3 +27,10 @@ body {
 .font-start {
     font-family: 'Press Start 2P', cursive;
 }
+
+.reserve-warning {
+    width: 50%;
+    background-color: #222;
+    color: #f77;
+    margin: 30px auto;
+}
