--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,10 @@
 <ul class="nav navbar-nav navbar-right">
   <li>
+    <div class="photo-container">
+      <img [src]="loggedInUser?.pictureURL" alt="" *ngIf="loggedInUser" class="img-responsive">
+    </div>
+  </li>
+  <li>
     <div class="button-box"><span *ngIf="loggedInUser" class="provider">{{ loggedInUser.displayName }}</span></div>
   </li>
   <li><div *ngIf="loggedInUser" class="button-box"><img src="loggedInUser.pictureURL" alt="" class="img-responsive"></div> </li>
