--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -2,7 +2,7 @@
 <h3 class="text-center">Welcome to a simulated room reservation system for Bitwise Industries</h3>
 <h4 class="text-center">Please log in, and select a room</h4>
 <div class="flex-container justify-center bitwise-black">
-    <img src="./../../assets/bitwise-black.jpg" alt="Bitwise Industries">
+    <h1 class="font-start">BITWISE INDUSTRIES</h1>
 </div>
 <div *ngIf="showWarning === true" class="alert alert-warning reserve-warning">
     <p class="text-center">Please log in first before selecting a room.</p>
